create curriculum matrix and corrections bugs